--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.6",
     "twilio": "^4.10.0",
     "winston": "^3.8.2"
   },
